baml_language/crates/baml_tests/snapshots/compiles/namespaces_type_resolution/baml_tests__compiles__namespaces_type_resolution__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 22639
---
=== PPIR ===
class user.Config {
  key: string
  env: string
}
class user.Config$stream {
  key: string | null
  env: string | null
}
class user.Error {
  code: int
  message: string
}
class user.Error$stream {
  code: int | null
  message: string | null
}
class user.RootWithCrossNsAlias {
  llm_alias: root.llm.ResponseAlias
  own_alias: user.ConfigAlias
}
class user.RootWithCrossNsAlias$stream {
  llm_alias: root.llm.Response$stream | null
  own_alias: user.Config$stream | null
}
class user.RootWithCrossNsFields {
  own_config: user.Config
  llm_config: root.llm.Config
  auth_config: root.auth.Config
  llm_response: root.llm.Response
  nested_client: root.llm.openai.Client
  own_status: user.Status
  own_alias: user.ConfigAlias
}
class user.RootWithCrossNsFields$stream {
  own_config: user.Config$stream | null
  llm_config: root.llm.Config$stream | null
  auth_config: root.auth.Config$stream | null
  llm_response: root.llm.Response$stream | null
  nested_client: root.llm.openai.Client$stream | null
  own_status: user.Status | null
  own_alias: user.Config$stream | null
}
enum user.Status {Ok, Failed, Pending}
type user.ConfigAlias = user.Config
type user.ConfigAlias$stream = user.Config$stream
function user.RootAliasParam(cfg: user.ConfigAlias) -> string  [expr] {
  {  } cfg.key
}
function user.RootConstruct(key: string) -> user.Config  [expr] {
  {  } user.Config { key: key, env: "prod" }
}
function user.RootEnumMatch(s: user.Status) -> string  [expr] {
  {  } match (s) { user.Status.Ok => "ok", user.Status.Failed => "failed", user.Status.Pending => "pending" }
}
function user.RootEnumReturn() -> user.Status  [expr] {
  {  } Status.Ok
}
function user.RootIdentity(cfg: user.Config) -> user.Config  [expr] {
  {  } cfg
}
function user.RootMixedConfigs(root_cfg: user.Config, llm_cfg: root.llm.Config) -> string  [expr] {
  {  } root_cfg.key
}
function user.RootThrowClass(x: int) -> string  [expr] {
  {  } match (x) { 0 => throw user.Error { code: 500, message: "root error" }, _ => "ok" }
}
function user.RootThrowEnum(x: int) -> string  [expr] {
  {  } match (x) { 0 => throw Status.Failed, _ => "ok" }
}
function user.RootUsesAuthConfig(cfg: root.auth.Config) -> string  [expr] {
  {  } cfg.provider
}
function user.RootUsesAuthError(e: root.auth.Error) -> string  [expr] {
  {  } e.realm
}
function user.RootUsesLlmConfig(cfg: root.llm.Config) -> string  [expr] {
  {  } cfg.model
}
function user.RootUsesLlmError(e: root.llm.Error) -> string  [expr] {
  {  } e.reason
}
function user.RootUsesLlmStatus() -> root.llm.Status  [expr] {
  {  } root.llm.Status.Ready
}
function user.RootUsesNestedClient(c: root.llm.openai.Client) -> string  [expr] {
  {  } c.api_key
}
class user.auth.Config {
  provider: string
  secret: string
}
class user.auth.Config$stream {
  provider: string | null
  secret: string | null
}
class user.auth.Error {
  realm: string
  expired: bool
}
class user.auth.Error$stream {
  realm: string | null
  expired: bool | null
}
class user.auth.Token {
  value: string
  role: user.auth.Role
}
class user.auth.Token$stream {
  value: string | null
  role: user.auth.Role | null
}
enum user.auth.Role {Admin, User, Guest}
type user.auth.TokenAlias = user.auth.Token
type user.auth.TokenAlias$stream = user.auth.Token$stream
function user.auth.AuthAliasParam(t: user.auth.TokenAlias) -> string  [expr] {
  {  } t.value
}
function user.auth.AuthConstruct(provider: string) -> user.auth.Config  [expr] {
  {  } user.auth.Config { provider: provider, secret: "s3cret" }
}
function user.auth.AuthEnumMatch(r: user.auth.Role) -> string  [expr] {
  {  } match (r) { user.auth.Role.Admin => "admin", user.auth.Role.User => "user", user.auth.Role.Guest => "guest" }
}
function user.auth.AuthEnumReturn() -> user.auth.Role  [expr] {
  {  } Role.Admin
}
function user.auth.AuthIdentity(cfg: user.auth.Config) -> user.auth.Config  [expr] {
  {  } cfg
}
function user.auth.AuthMakeToken(v: string) -> user.auth.Token  [expr] {
  {  } user.auth.Token { value: v, role: Role.User }
}
function user.auth.AuthMatchesLlmStatus(s: root.llm.Status) -> string  [expr] {
  {  } match (s) { root.llm.Status.Ready => "ready", root.llm.Status.Generating => "generating", root.llm.Status.Done => "done" }
}
function user.auth.AuthMatchesRootStatus(s: root.Status) -> string  [expr] {
  {  } match (s) { root.Status.Ok => "ok", root.Status.Failed => "failed", root.Status.Pending => "pending" }
}
function user.auth.AuthMixedConfigs(auth_cfg: user.auth.Config, root_cfg: root.Config, llm_cfg: root.llm.Config) -> string  [expr] {
  {  } auth_cfg.provider
}
function user.auth.AuthMixedErrors(auth_err: user.auth.Error, root_err: root.Error, llm_err: root.llm.Error) -> string  [expr] {
  {  } auth_err.realm
}
function user.auth.AuthThrowClass(x: int) -> string  [expr] {
  {  } match (x) { 0 => throw user.auth.Error { realm: "auth failed", expired: true }, _ => "ok" }
}
function user.auth.AuthThrowEnum(x: int) -> string  [expr] {
  {  } match (x) { 0 => throw Role.Guest, _ => "ok" }
}
function user.auth.AuthThrowsRootError(x: int) -> string  [expr] {
  {  } match (x) { 0 => throw root.Error { code: 403, message: "forbidden" }, _ => "ok" }
}
function user.auth.AuthUsesLlmConfig(cfg: root.llm.Config) -> string  [expr] {
  {  } cfg.model
}
function user.auth.AuthUsesLlmResponse(r: root.llm.Response) -> string  [expr] {
  {  } r.text
}
function user.auth.AuthUsesLlmStatus() -> root.llm.Status  [expr] {
  {  } root.llm.Status.Ready
}
function user.auth.AuthUsesNestedClient(c: root.llm.openai.Client) -> string  [expr] {
  {  } c.api_key
}
function user.auth.AuthUsesRootConfig(cfg: root.Config) -> string  [expr] {
  {  } cfg.key
}
function user.auth.AuthUsesRootStatus() -> root.Status  [expr] {
  {  } root.Status.Pending
}
class user.llm.Config {
  model: string
  temperature: float
}
class user.llm.Config$stream {
  model: string | null
  temperature: float | null
}
class user.llm.Error {
  reason: string
  retryable: bool
}
class user.llm.Error$stream {
  reason: string | null
  retryable: bool | null
}
class user.llm.LlmWithCrossNsFields {
  own_config: user.llm.Config
  own_response: user.llm.Response
  root_config: root.Config
  root_error: root.Error
  auth_config: root.auth.Config
  nested_client: root.llm.openai.Client
  own_status: user.llm.Status
  own_alias: user.llm.ConfigAlias
  root_alias: root.ConfigAlias
}
class user.llm.LlmWithCrossNsFields$stream {
  own_config: user.llm.Config$stream | null
  own_response: user.llm.Response$stream | null
  root_config: root.Config$stream | null
  root_error: root.Error$stream | null
  auth_config: root.auth.Config$stream | null
  nested_client: root.llm.openai.Client$stream | null
  own_status: user.llm.Status | null
  own_alias: root.Config$stream | null
  root_alias: root.Config$stream | null
}
class user.llm.LlmWithRootAlias {
  root_alias: root.ConfigAlias
  own_alias: user.llm.ResponseAlias
}
class user.llm.LlmWithRootAlias$stream {
  root_alias: root.Config$stream | null
  own_alias: user.llm.Response$stream | null
}
class user.llm.Response {
  text: string
  tokens: int
}
class user.llm.Response$stream {
  text: string | null
  tokens: int | null
}
enum user.llm.Model {GPT4, Claude}
enum user.llm.Status {Ready, Generating, Done}
type user.llm.ConfigAlias = user.llm.Config
type user.llm.ConfigAlias$stream = user.llm.Config$stream
type user.llm.ResponseAlias = user.llm.Response
type user.llm.ResponseAlias$stream = user.llm.Response$stream
function user.llm.LlmAliasParam(cfg: user.llm.ConfigAlias) -> string  [expr] {
  {  } cfg.model
}
function user.llm.LlmConstruct(model: string) -> user.llm.Config  [expr] {
  {  } user.llm.Config { model: model, temperature: 0.7 }
}
function user.llm.LlmEnumMatch(s: user.llm.Status) -> string  [expr] {
  {  } match (s) { user.llm.Status.Ready => "ready", user.llm.Status.Generating => "generating", user.llm.Status.Done => "done" }
}
function user.llm.LlmEnumReturn() -> user.llm.Status  [expr] {
  {  } Status.Ready
}
function user.llm.LlmIdentity(cfg: user.llm.Config) -> user.llm.Config  [expr] {
  {  } cfg
}
function user.llm.LlmMatchesRootStatus(s: root.Status) -> string  [expr] {
  {  } match (s) { root.Status.Ok => "ok", root.Status.Failed => "failed", root.Status.Pending => "pending" }
}
function user.llm.LlmMixedConfigs(llm_cfg: user.llm.Config, root_cfg: root.Config, auth_cfg: root.auth.Config) -> string  [expr] {
  {  } llm_cfg.model
}
function user.llm.LlmResponseConstruct(text: string) -> user.llm.Response  [expr] {
  {  } user.llm.Response { text: text, tokens: 42 }
}
function user.llm.LlmThrowClass(x: int) -> string  [expr] {
  {  } match (x) { 0 => throw user.llm.Error { reason: "llm failed", retryable: true }, _ => "ok" }
}
function user.llm.LlmThrowEnum(x: int) -> string  [expr] {
  {  } match (x) { 0 => throw Status.Done, _ => "ok" }
}
function user.llm.LlmThrowsRootEnum(x: int) -> string  [expr] {
  {  } match (x) { 0 => throw root.Status.Failed, _ => "ok" }
}
function user.llm.LlmThrowsRootError(x: int) -> string  [expr] {
  {  } match (x) { 0 => throw root.Error { code: 404, message: "not found" }, _ => "ok" }
}
function user.llm.LlmUsesAuthConfig(cfg: root.auth.Config) -> string  [expr] {
  {  } cfg.provider
}
function user.llm.LlmUsesAuthError(e: root.auth.Error) -> string  [expr] {
  {  } e.realm
}
function user.llm.LlmUsesAuthRole() -> root.auth.Role  [expr] {
  {  } root.auth.Role.Admin
}
function user.llm.LlmUsesNestedClient(c: root.llm.openai.Client) -> string  [expr] {
  {  } c.api_key
}
function user.llm.LlmUsesRootAlias(cfg: root.ConfigAlias) -> string  [expr] {
  {  } cfg.key
}
function user.llm.LlmUsesRootConfig(cfg: root.Config) -> string  [expr] {
  {  } cfg.key
}
function user.llm.LlmUsesRootError(e: root.Error) -> string  [expr] {
  {  } e.message
}
function user.llm.LlmUsesRootStatus() -> root.Status  [expr] {
  {  } root.Status.Ok
}
class user.llm.openai.Client {
  api_key: string
  org_id: string
}
class user.llm.openai.Client$stream {
  api_key: string | null
  org_id: string | null
}
class user.llm.openai.Error {
  status_code: int
  body: string
}
class user.llm.openai.Error$stream {
  status_code: int | null
  body: string | null
}
enum user.llm.openai.Model {GPT4o, GPT4oMini, O3}
function user.llm.openai.OpenAIConstruct(key: string) -> user.llm.openai.Client  [expr] {
  {  } user.llm.openai.Client { api_key: key, org_id: "org-123" }
}
function user.llm.openai.OpenAIEnumMatch(m: user.llm.openai.Model) -> string  [expr] {
  {  } match (m) { user.llm.openai.Model.GPT4o => "gpt4o", user.llm.openai.Model.GPT4oMini => "gpt4o-mini", user.llm.openai.Model.O3 => "o3" }
}
function user.llm.openai.OpenAIEnumReturn() -> user.llm.openai.Model  [expr] {
  {  } Model.GPT4o
}
function user.llm.openai.OpenAIIdentity(c: user.llm.openai.Client) -> user.llm.openai.Client  [expr] {
  {  } c
}
function user.llm.openai.OpenAIMatchesAuthRole(r: root.auth.Role) -> string  [expr] {
  {  } match (r) { root.auth.Role.Admin => "admin", root.auth.Role.User => "user", root.auth.Role.Guest => "guest" }
}
function user.llm.openai.OpenAIMatchesLlmStatus(s: root.llm.Status) -> string  [expr] {
  {  } match (s) { root.llm.Status.Ready => "ready", root.llm.Status.Generating => "generating", root.llm.Status.Done => "done" }
}
function user.llm.openai.OpenAIMatchesRootStatus(s: root.Status) -> string  [expr] {
  {  } match (s) { root.Status.Ok => "ok", root.Status.Failed => "failed", root.Status.Pending => "pending" }
}
function user.llm.openai.OpenAIMixedErrors(openai_err: user.llm.openai.Error, root_err: root.Error, llm_err: root.llm.Error, auth_err: root.auth.Error) -> string  [expr] {
  {  } openai_err.body
}
function user.llm.openai.OpenAIMixedModels(openai_model: user.llm.openai.Model, llm_model: root.llm.Model) -> string  [expr] {
  {  } match (openai_model) { user.llm.openai.Model.GPT4o => "gpt4o", user.llm.openai.Model.GPT4oMini => "mini", user.llm.openai.Model.O3 => "o3" }
}
function user.llm.openai.OpenAIThrowClass(x: int) -> string  [expr] {
  {  } match (x) { 0 => throw user.llm.openai.Error { status_code: 429, body: "rate limited" }, _ => "ok" }
}
function user.llm.openai.OpenAIThrowEnum(x: int) -> string  [expr] {
  {  } match (x) { 0 => throw Model.O3, _ => "ok" }
}
function user.llm.openai.OpenAIUsesAuthConfig(cfg: root.auth.Config) -> string  [expr] {
  {  } cfg.provider
}
function user.llm.openai.OpenAIUsesAuthRole() -> root.auth.Role  [expr] {
  {  } root.auth.Role.User
}
function user.llm.openai.OpenAIUsesLlmConfig(cfg: root.llm.Config) -> string  [expr] {
  {  } cfg.model
}
function user.llm.openai.OpenAIUsesLlmResponse(r: root.llm.Response) -> string  [expr] {
  {  } r.text
}
function user.llm.openai.OpenAIUsesLlmStatus() -> root.llm.Status  [expr] {
  {  } root.llm.Status.Generating
}
function user.llm.openai.OpenAIUsesRootConfig(cfg: root.Config) -> string  [expr] {
  {  } cfg.key
}
function user.llm.openai.OpenAIUsesRootStatus() -> root.Status  [expr] {
  {  } root.Status.Ok
}
